<resources>

    <string name="app_name">SmartAlarm</string>
    <string name="action_settings">Settings</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="change_time">Select Time</string>
    <string name="current_time">"Current Time (H:M): "</string>
    <string name="selected_time">"Current Alarm (H:M): "</string>
    <string name="set_one_time_alarm">Set One Time Alarm</string>
    <string name="set_daily_alarm">Set Daily Alarm</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="notification_subtitle">Counting your steps</string>
    <string name="started">Pedometer started.</string>
    <string name="stopped">Pedometer stopped.</string>
    <string name="steps">steps</string>
    <string name="kilometers">kilometers</string>
    <string name="miles">miles</string>
    <string name="steps_per_minute">steps / minute</string>
    <string name="kilometers_per_hour">kilometers / hour</string>
    <string name="miles_per_hour">miles / hour</string>
    <string name="calories_burned">calories burned</string>
    <string name="centimeters">centimeters</string>
    <string name="inches">inches</string>
    <string name="kilograms">kilograms</string>
    <string name="pounds">pounds</string>
    <string name="desired_pace">Desired pace:</string>
    <string name="desired_speed">Desired speed:</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="activity_settings">Pedometer Settings</string>
    <string name="steps_settings_title">Basic Settings</string>
    <string name="sensitivity_setting">Sensitivity</string>
    <string name="sensitivity_setting_details">Calibrate the step detector</string>
    <string name="sensitivity_setting_title">Select sensitivity level</string>
    <string name="extra_high">extra high</string>
    <string name="very_high">very high</string>
    <string name="high">high</string>
    <string name="higher">higher</string>
    <string name="medium">medium</string>
    <string name="lower">lower</string>
    <string name="low">low</string>
    <string name="very_low">very low</string>
    <string name="extra_low">extra low</string>
    <string name="operation_level_setting">Operational level</string>
    <string name="operation_level_setting_details">Some OS versions prevent using sensors when the screen is off; set the level that works for you</string>
    <string name="operation_level_setting_title">Select operational level</string>
    <string name="run_in_background">Normal (just try running in background)</string>
    <string name="keep_screen_on">Screen on (keep screen dim)</string>
    <string name="wake_up">Aggressive (wake up when I turn screen off)</string>
    <string name="units_setting">Units</string>
    <string name="units_setting_details">Imperial or metric units</string>
    <string name="units_setting_title">Choose your units</string>
    <string name="units_metric">metric (kilometers)</string>
    <string name="units_imperial">imperial (miles)</string>
    <string name="step_length_setting">Step length</string>
    <string name="step_length_setting_details">For distance, speed &amp; calorie calculation</string>
    <string name="step_length_setting_title">Enter your step length</string>
    <string name="body_weight_setting">Body weight</string>
    <string name="body_weight_setting_details">For calorie calculation</string>
    <string name="body_weight_setting_title">Enter your body weight</string>
    <string name="exercise_type_setting">Exercise type</string>
    <string name="exercise_type_setting_details">For calorie calculation</string>
    <string name="exercise_type_setting_title">Choose exercise type</string>
    <string name="exercise_type_running">running</string>
    <string name="exercise_type_walking">walking</string>
    <string name="maintain_setting">Maintain pace/speed</string>
    <string name="maintain_setting_details">Maintaining a desired a pace/speed</string>
    <string name="maintain_setting_title">Maintain:</string>
    <string name="maintain_nothing">nothing</string>
    <string name="maintain_pace">pace</string>
    <string name="maintain_speed">speed</string>
    <string name="voice_settings_title">Voice</string>
    <string name="voice_setting">Speak</string>
    <string name="voice_setting_details">Enable/disable voice notification</string>
    <string name="speaking_interval_setting">Interval</string>
    <string name="speaking_interval_setting_details">Voice notification interval</string>
    <string name="interval_15_seconds">15 seconds</string>
    <string name="interval_30_seconds">30 seconds</string>
    <string name="interval_1_minute">1 minute</string>
    <string name="interval_2_minutes">2 minutes</string>
    <string name="interval_5_minutes">5 minutes</string>
    <string name="interval_10_minutes">10 minutes</string>
    <string name="tell_what">What to tell</string>
    <string name="tell_steps_setting">Steps</string>
    <string name="tell_steps_setting_details"></string>
    <string name="tell_pace_setting">Pace</string>
    <string name="tell_pace_setting_details">steps / minute</string>
    <string name="tell_distance_setting">Distance</string>
    <string name="tell_distance_setting_details">kilometers or miles</string>
    <string name="tell_speed_setting">Speed</string>
    <string name="tell_speed_setting_details">km/h or mph</string>
    <string name="tell_calories_setting">Calories burned</string>
    <string name="tell_calories_setting_details"></string>
    <string name="tell_fasterslower_setting">Faster/slower</string>
    <string name="tell_fasterslower_setting_details">Helps you maintain your desired pace or speed (interval doesn\'t apply)</string>
    <string name="incorrect_step_length">Incorrect step length format! Go to the Settings to change it!</string>
    <string name="quit">Quit</string>

    <string name="alarm_name">Alarm Name</string>
    <string name="eg_name">Eg: Walmart</string>
    <string name="alarm_notes">Alarm Notes</string>
    <string name="eg_notes">Eg: Get the groceries</string>
    <string name="radius_in_mtr">Radius in mts</string>
    <string name="eg_radius_in_mtr">Eg: 500</string>
    <string name="destination">Destination</string>
    <string name="your_destination">Your destination</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="enter_name">Enter Alarm Name</string>
    <string name="enter_notes">Enter Alarm Notes</string>
    <string name="enter_radius">Enter Radius limit for alarm to detect</string>
    <string name="enter_destination">Enter your destination</string>
    <string name="dialog_reset_title">Reset</string>
    <string name="dialog_reset_message">Are you sure you want to reset the Alarm?</string>
    <string name="yes">Yes</string>
    <string name="dialog_cancel_message">Are you sure, you want to cancel your modifications?</string>
    <string name="dialog_cancel_title">Cancel</string>
    <string name="dialog_save_message">Your Alarm has been set</string>
    <string name="okay">OK</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="request_updates">Request updates</string>
    <string name="remove_updates">Remove updates</string>
    <string name="unknown_location">Unknown location</string>
    <string name="batched_location_updates">Batched location updates</string>

    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>

    <string name="default_channel">Default channel</string>
    <string name="gps_network_not_enabled">Enable GPS to enable detect your current location and track the destination address!</string>
    <string name="open_location_settings">Open Location settings</string>

</resources>
