<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".LocationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtAlarmName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/alarm_name" />

            <EditText
                android:id="@+id/edtAlarmName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/eg_name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtAlarmNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/alarm_notes" />

            <EditText
                android:id="@+id/edtAlarmNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/eg_notes"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLines="4" />

            <TextView
                android:id="@+id/txtRadiusInMtr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/radius_in_mtr" />

            <EditText
                android:id="@+id/edtRadiusInMtr"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/eg_radius_in_mtr"
                android:inputType="number" />

            <TextView
                android:id="@+id/txtDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/destination" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtDestination"
                    android:layout_width="259dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="89dp"
                    android:layout_marginTop="8dp"
                    android:layout_toLeftOf="@+id/imgDestination"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/your_destination"
                    android:inputType="text" />

                <ImageView
                    android:id="@+id/imgDestination"
                    android:layout_width="45dp"
                    android:layout_height="31dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/save"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/reset"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/cancel"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>