<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/backg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <AnalogClock
        android:id="@+id/analogClock1"
        android:layout_width="158dp"
        android:layout_height="195dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228" />

    <Button
        android:id="@+id/btnChangeTime"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:text="@string/change_time"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <LinearLayout
        android:layout_width="289dp"
        android:layout_height="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651">

        <TextView
            android:id="@+id/lblSelectedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/selected_time"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSelectedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textIsSelectable="true"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_one_time_alarm"
        android:visibility="gone" />

    <Button
        android:id="@+id/button3"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cancel_alarm"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />


</android.support.constraint.ConstraintLayout>